# winapi_gdi

./: CMakeLists.txt  CURVE.cpp  CURVE.h  FACTORY.cpp  FACTORY.h  GYPERBOLA.cpp  GYPERBOLA.h  PARABOLA.cpp  PARABOLA.h  SINUS.cpp  SINUS.h  Source.cpp  TANGENT.cpp  TANGENT.h  globals.h  test_git_add_and_push_new_branch.cpp  winapi_gdi.cpp  winapi_gdi.h
